--- a/fashionclassifier.ipynb
+++ b/fashionclassifier.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyND+QAoI0W2w+VKwTDWzCe2",
+      "authorship_tag": "ABX9TyPi9YqiJdkKKsBBkKnDjLAO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +28,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "CyQOF09lmUvI"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "import os\n",
+        "import cv2 # opencv lib\n",
+        "import csv\n",
+        "import random\n",
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "import plotly.express as px\n",
+        "import matplotlib.pyplot as plt\n",
+        "import matplotlib.image as mpimg\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "zoQV0xsfXKrg"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
